aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} util)
if(APPLE)
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/unix util_local)
else()
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/windows util_local)
endif()
add_library(util STATIC ${util} ${util_local})
target_include_directories(util PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${PROJECT_SOURCE_DIR}/third_party/jsoncpp/include/json)
if(NOT APPLE)
    target_link_libraries(util shlwapi dbghelp opengl32 gdi32)
endif()