# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//developtools/profiler/device/base/config.gni")

ohos_executable("transitto") {
  sources = [ "transitto.cpp" ]

  include_dirs = [ "//third_party/json/include" ]
  defines = []
  cflags_cc = [ "-std=c++20" ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = []

  if (build_selinux) {
    include_dirs += [ "//third_party/selinux/libselinux/include" ]
    deps += [ "//third_party/selinux:libselinux" ]
    defines += [ "SUPPORT_SELINUX_TRANSITTO" ]
    external_deps += [
      "selinux:libload_policy",
      "selinux:librestorecon",
    ]
  }

  install_images = [ "system" ]

  install_enable = true
  subsystem_name = "developtools"
  part_name = "profiler"
}

ohos_executable("transitto_test") {
  sources = [ "transitto_test.cpp" ]

  include_dirs = []
  defines = []
  cflags_cc = [ "-std=c++20" ]

  external_deps = [ "c_utils:utils" ]

  deps = []

  subsystem_name = "developtools"
  part_name = "profiler"
}

group("transitto_tool") {
  deps = [ ":transitto" ]
}

group("transitto_tool_test") {
  deps = [ ":transitto_test" ]
}
