# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_kits_path = "//foundation/ability/ability_runtime/frameworks/native"
aafwk_path = "${aafwk_kits_path}/frameworks/kits"
file_api_path = "//foundation/filemanagement/file_api"
src_path = "${file_api_path}/interfaces/kits/js/src"
utils_path = "${file_api_path}/utils"
