# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bgtaskmgr_root_path = "//foundation/resourceschedule/background_task_mgr"

bgtaskmgr_interfaces_path = "${bgtaskmgr_root_path}/interfaces"

bgtaskmgr_utils_path = "${bgtaskmgr_root_path}/utils/native"

bgtaskmgr_frameworks_path = "${bgtaskmgr_root_path}/frameworks"

bgtaskmgr_services_path = "${bgtaskmgr_root_path}/services"

declare_args() {
  background_task_mgr_graphics = true
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.account_os_account)) {
  has_os_account_part = true
} else {
  has_os_account_part = false
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.notification_distributed_notification_service)) {
  distributed_notification_enable = true
} else {
  distributed_notification_enable = false
}
