# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

frame_aware_path = "//foundation/resourceschedule/frame_aware_sched"
service_path = "${frame_aware_path}/services"
innerkits_path = "${frame_aware_path}/interfaces/innerkits"

framework_path = "${frame_aware_path}/frameworks/core"
