# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

memmgr_subsystem_name = "resourceschedule"

memmgr_part_name = "memmgr"

memmgr_root_path = "//foundation/resourceschedule/${memmgr_part_name}"

memmgr_common_path = "${memmgr_root_path}/common"

memmgr_service_path = "${memmgr_root_path}/services/memmgrservice"

memgr_innerkits_path = "${memmgr_root_path}/interface/innerkits"

declare_args() {
  memmgr_report_has_bg_task_mgr = false

  if (defined(global_parts_info) &&
      defined(global_parts_info.resourceschedule_background_task_mgr)) {
    memmgr_report_has_bg_task_mgr = true
  }
}
