# Copyright (c) 2022 Chipsea Technologies (Shenzhen) Corp., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/sensors/medical_sensor"
ohos_shared_library("libmedical_utils") {
  sources = [
    "src/dmd_report.cpp",
    "src/medical.cpp",
    "src/medical_basic_data_channel.cpp",
    "src/medical_basic_info.cpp",
    "src/medical_channel_info.cpp",
    "src/permission_util.cpp",
    "src/report_data_cache.cpp",
  ]

  include_dirs = [
    "include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//drivers/peripheral/sensor/interfaces/include",
    "$SUBSYSTEM_DIR/interfaces/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/message_parcel.h",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  part_name = "medical_sensor"
  subsystem_name = "sensors"
}

group("medical_utils_target") {
  deps = [ ":libmedical_utils" ]
}
