# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
ohos_shared_library("libmiscdevice_utils") {
  sources = [
    "src/file_utils.cpp",
    "src/json_parser.cpp",
    "src/miscdevice_common.cpp",
    "src/permission_util.cpp",
  ]

  include_dirs = [
    "include",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//third_party/cJSON",
  ]

  deps = [ "//third_party/cJSON:cjson" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  part_name = "miscdevice"
  subsystem_name = "sensors"
}

group("miscdevice_utils_target") {
  deps = [ ":libmiscdevice_utils" ]
}
