# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/time/time_service/time.gni")

config("time_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${api_path}/include",
    "../utils/native/include",
    "time/include",
    "timer/include",
    "dfx/include",
    "ipc/base",
    "ipc/proxy",
    "ipc/stub",
    "${time_service_path}",
    "//third_party/json/include",
  ]
}

ohos_shared_library("time_service") {
  configs = [ "${time_utils_path}:utils_config" ]

  public_configs = [
    ":time_service_config",
  ]

  sources = [
    "./time_permission.cpp",
    "./time_system_ability.cpp",
    "dfx/src/time_cmd_dispatcher.cpp",
    "dfx/src/time_cmd_parse.cpp",
    "dfx/src/time_sysevent.cpp",
    "ipc/proxy/timer_call_back_proxy.cpp",
    "ipc/stub/time_service_stub.cpp",
    "time/src/itimer_info.cpp",
    "time/src/net_conn_callback_observer.cpp",
    "time/src/nitz_subscriber.cpp",
    "time/src/ntp_trusted_time.cpp",
    "time/src/ntp_update_time.cpp",
    "time/src/simple_timer_info.cpp",
    "time/src/sntp_client.cpp",
    "time/src/time_service_notify.cpp",
    "time/src/time_tick_notify.cpp",
    "time/src/time_zone_info.cpp",
    "timer/src/batch.cpp",
    "timer/src/timer_handler.cpp",
    "timer/src/timer_info.cpp",
    "timer/src/timer_manager.cpp",
    "time/src/power_subscriber.cpp",
  ]

  deps = [
    "//third_party/jsoncpp:jsoncpp",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  part_name = "time_service"
  subsystem_name = "time"
}